--- a/app/src/main/res/drawable/square_bg.xml
+++ b/app/src/main/res/drawable/square_bg.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#2B50AB" /> <!-- Transparent background -->
-        <stroke
-            android:width="1dp"
-            android:color="#110909" /> <!-- Border color -->
-        <size
-            android:width="100dp"
-        android:height="100dp" /> <!-- Height of the square -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+        <corners android:radius="5dp" /> <!-- Adjust the radius as needed -->
+        <solid android:color="#2B50AB" />
 </shape>
