--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bank"
+        android:transitionName="logo_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -30,6 +31,7 @@
         android:textAlignment="center"
         android:textColor="#F5330239"
         android:textSize="48sp"
+        android:transitionName="logo_text"
         android:letterSpacing="0.2"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
