--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,6 +11,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:paddingTop="20dp"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/bank"/>
