splash and login (new)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#800080"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".LoginActivity">
@@ -12,26 +12,26 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/bank"
-        android:transitionName="logo_image"/>
+        android:src="@drawable/text"
+        android:transitionName="logo_text"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/abril_fatface"
-        android:text="Hello there! Welcome Back"
-        android:transitionName="logo_text"
+        android:fontFamily="@font/acme"
+        android:text="Hello there!
+                     Welcome Back"
         android:textAllCaps="true"
-        android:textColor="#050505"
-        android:textSize="40sp" />
+        android:textColor="#EE0000"
+        android:textSize="36sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Sign in to continue"
-        android:textColor="#070606"
+        android:textColor="#282460"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -52,7 +52,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -71,7 +71,7 @@
                 android:layout_height="match_parent"
                 android:inputType="textPassword"
                 android:textSize="16sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,7 +82,7 @@
             android:textAlignment="textEnd"
             android:textColor="@color/mustard"
             android:textSize="18sp"
-            android:background="@color/mainPurple"/>
+            android:background="@color/white"/>
 
     </LinearLayout>
 
@@ -90,18 +90,18 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="#282460"
         android:text="Login"
         android:textColor="@color/white"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:text="New user? Sign Up"
-        android:background="@color/mainPurple"
-        android:textSize="20sp"
-        android:textColor="@color/white"/>
+        android:textColor="#EE0000"
+        android:textSize="20sp" />
 
 </LinearLayout>
